--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -13,5 +13,12 @@ korolevss {
         dir = ./uploads
         dir = ${?UPLOAD_DIR}
     }
+    fcm {
+        db-url = "https://kruspushapp.firebaseio.com"
+        password = ${?FCM_PASSWORD}
+        salt = ${?FCM_SALT}
+        path = ./fcm/fcm-encrypted.json
+        path = ${?FCM_PATH}
+    }
 }
 
